Fichier Rank remis à jour

--- a/src/components/CardRank.module.css
+++ b/src/components/CardRank.module.css
@@ -18,3 +18,9 @@
 .text {
   margin-left: 5%;
 }
+@media screen and (min-width: 200px) and (max-width: 640px) {
+  .bloc {
+    display: block;
+    clear: both;
+  }
+}
