linked cardhome with cardguild fforr the first three guilds, created a state for the cardguild  component, added content on cardguild modulee css to add  style on first three guilds on homepage

--- a/src/Css/Navbar.scss
+++ b/src/Css/Navbar.scss
@@ -31,7 +31,7 @@
       color: rgb(255, 255, 255);
       transition: 0.3s;
       text-decoration-line: none !important;
-      &::after {
+      &:after {
         transform: translateX(-50%) scaleX(1);
       }
     }
