--- a/src/Css/CardGuild.module.css
+++ b/src/Css/CardGuild.module.css
@@ -1,15 +1,3 @@
-.displayed {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.title {
-  text-align: center;
-  font-style: unset;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-
 .container {
   margin-left: 20%;
   margin-right: 20%;
@@ -17,6 +5,22 @@
 
 .text {
   margin-left: 5%;
+}
+
+h6 {
+  margin: 0 0 5px 0 !important;
+  text-transform: capitalize;
+  font-size: 25px !important;
+  display: flex;
+  flex-direction: column;
+  font-style: unset;
+  font-family: Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color: #191e2a;
+}
+
+a:hover {
+  text-decoration-line: none !important;
+  color: white;
 }
 
 @media screen and (min-width: 200px) and (max-width: 640px) {
