--- a/src/components/layouts/Navbar.module.scss
+++ b/src/components/layouts/Navbar.module.scss
@@ -1,10 +1,10 @@
-.navbar_body {
+.body {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.75) -10%, rgba(0, 0, 0, 0) 100%);
   text-align: center;
   padding: 0.5rem 0 5rem;
   font-size: 1.25rem;
 }
-.title-navbar {
+.title {
   & {
     font-size: 2rem !important;
     position: relative;
