--- a/src/components/raid/RaidPage.module.css
+++ b/src/components/raid/RaidPage.module.css
@@ -1,4 +1,3 @@
-
 a {
   color: #a9b0e8 !important;
 }
@@ -6,7 +5,8 @@ a {
 a:hover {
   text-decoration-line: none !important;
   color: white !important;
-  
+}
+
 .text {
   margin-left: 5%;
 }
@@ -25,5 +25,4 @@ h3 {
     display: block;
     clear: both;
   }
-
 }
