created assets file to use woff font format, still stylizing page guild jsx file

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Avara-Black';
+  src: url('./assets/fonts/Avara-Black.otf');
+}
+
 *,
 *::before,
 *::after {
@@ -7,5 +12,18 @@
 body {
   background: #191e2a !important;
   width: 100vw;
-  font-family: Helvetica !important;
+  font-family: 'Avara-Black';
+}
+
+h2 {
+  font-family: 'Avara-Black';
+}
+
+footer {
+  color: #a9b0e8;
+  font-size: 10px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 55px;
 }
