--- a/src/components/guild/GuildPage.module.css
+++ b/src/components/guild/GuildPage.module.css
@@ -7,6 +7,16 @@
   margin-left: 5%;
 }
 
+h1 {
+  color: white;
+  font-size: 30px !important;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-bottom: 2rem;
+  padding-bottom: 2rem;
+}
+
 h2 {
   color: #a9b0e8;
 }
