--- a/src/components/guild/GuildPage.module.css
+++ b/src/components/guild/GuildPage.module.css
@@ -15,10 +15,15 @@ h1 {
   text-align: center;
   margin-bottom: 2rem;
   padding-bottom: 2rem;
+  font-family: 'Avara-Bold';
 }
 
 h2 {
   color: #a9b0e8;
+  text-align: center;
+  font-size: 25px !important;
+  text-transform: capitalize;
+  padding-bottom: 1rem;
 }
 
 h6 {
@@ -38,10 +43,21 @@ a:hover {
   color: white !important;
 }
 
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 20px;
+}
+
 p {
   color: #a9b0e8;
   display: flex;
   flex-direction: column;
+  text-align: center;
+}
+
+table {
   text-align: center;
 }
 
