--- a/src/components/layouts/Navbar.module.scss
+++ b/src/components/layouts/Navbar.module.scss
@@ -6,13 +6,14 @@
 }
 .title {
   & {
-    font-size: 2rem !important;
+    font-size: 3rem !important;
     position: relative;
     padding: 1rem 0 0.5rem;
     margin: 0 1.5rem;
     color: #a9b0e8;
     text-decoration: none;
     text-shadow: 4px 4px 1px rgb(0, 0, 0);
+    font-family: 'Avara-Black';
 
     &::after {
       content: '';
